# CV-Mindcare

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARM64_SETUP.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONSOLIDATION_SUMMARY.md  Dockerfile  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IT-GP-Form4-Weekly meeting Form1.docx  IT-GP-Form4-Weekly meeting Form2.docx  IT-GP-Form4-Weekly meeting Form3.docx  IT-GP-Form4-Weekly meeting Form4.docx  IT492-Report_Template[1]100.docx  LEAD_DEVELOPER_WALKTHROUGH.md  Makefile  NEXT_DEVELOPMENT_PHASES.md  PICAMERA2_SUPPORT_SUMMARY.md  PROJECT_ANALYSIS.md  PROJECT_STATUS.md  README.bak  README.dev.md  README.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  SIMULATION_BUG_FIX.md  SIMULATION_ENGINE_SUMMARY.md  USER_EXPERIENCE_GUIDE.md  WholeSystem.py  build.ps1  docker-compose.yml  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt  requirements-ml-rpi.txt  requirements-ml.txt  requirements.txt  run_app.py  (+4 more)
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  lint.yml  security.yml  test.yml
archive/: README.md
archive/original_backend/: setup.ps1  setup.sh
archive/original_backend/cv_mindcare/: __init__.py
archive/original_backend/cv_mindcare/core/: summary.py
archive/original_backend/cv_mindcare/sensors/: __init__.py  emotion.py  noise.py
backend/: README.md  __init__.py  analytics.py  app.py  config.py  context_engine.py  cv_mindcare.db  database.py  main.py  models.py  websocket_routes.py
backend/sensors/: __init__.py  air_quality.py  base.py  camera.py  camera_sensor.py  emotion_detection.py  microphone.py  microphone_sensor.py  sensor_manager.py  sound_analysis.py  system_monitor.py
backend/services/: __init__.py  simulation_controller.py
build_scripts/: build_exe.py
config/: analytics.yaml  api.yaml  database.yaml  sensors.yaml
cv_mindcare/: database_manager.py
cv_mindcare/cli/: main.py
cv_mindcare/core/: __init__.py
cv_mindcare/llm/: __init__.py  ollama.py
cv_mindcare/sensors/: vision.py
docs/: CI_CD_SETUP.md  DEVELOPMENT.md  GITHUB_SYNC_COMPLETE.md  INSTALLATION.md  MILESTONES_COMPLETE.md  PERFORMANCE.md  PICAMERA2_INTEGRATION.md  QUICK_TEST.md  README.md  TROUBLESHOOTING.md
docs/deployment/: docker.md  production.md  raspberry-pi.md
docs/development/: CI_CD_SETUP.md  api-reference.md  architecture.md  contributing.md  testing.md
docs/examples/: api_examples.py  curl_examples.sh  javascript_examples.js  websocket_client.py
docs/features/: simulation-engine.md
docs/getting-started/: hardware-setup.md  installation.md  quick-start.md
docs/hardware/: ADS1115_SETUP.md  INDEPENDENT_INITIALIZATION.md
docs/integrations/: README.md  home-assistant.md
docs/project-management/: AUDIT_EXECUTIVE_SUMMARY.md  COMPLIANCE_TRACKING.md  GITHUB_SYNC_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANUSCRIPT_AUDIT_ISSUES.md  MANUSCRIPT_AUDIT_REPORT.md  MILESTONE_V0.2.0.md  README.md  RELEASE_NOTES_v1.0.0.md  REPOSITORY_CLEANUP_SUMMARY.md  backlog.md  changelog.md  milestones.md  repository-organization-summary.md
docs/troubleshooting/: SENSOR_DETECTION.md
docs/user-guide/: desktop-app.md  features.md  web-dashboard.md
examples/: README.md  picamera2_opencv_demo.py
frontend/: .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/css/: styles.css
frontend/js/: dashboard.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AffectDisplay.jsx  ChartCard.jsx  Charts.jsx  Dashboard.jsx  GreeneryMeter.jsx  Hero.jsx  Navbar.jsx  NoiseMeter.jsx  PatternInsights.jsx  Recommendations.jsx  SensorCard.jsx  SettingsPanel.jsx  SimulationControl.jsx  StartStop.jsx  SuggestionBox.jsx  ThemeToggle.jsx  WellnessScore.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  Input.jsx  Toggle.jsx
frontend/src/hooks/: useFetch.js
frontend/src/pages/: About.jsx  Dashboard.jsx  Settings.jsx
frontend/src/services/: api.js
frontend/src/utils/: formatters.js
launcher/: README.md  config.py  launcher.py  process_manager.py  settings_dialog.py  system_check.py  tray.py  updater.py
scripts/: README.md  optimize_database.py
tests/: README.md  test_summary.py
tests/integration/: test_air_quality_integration.py  test_api_database.py  test_custom_params_api.py  test_simulation_api.py
tests/manual/: test_air_quality_analytics.py
tests/unit/: test_air_quality_sensor.py  test_analytics.py  test_api.py  test_camera_sensor.py  test_database.py  test_microphone_sensor.py  test_sensor_auto_detection.py  test_sensor_base.py  test_sensor_manager.py  test_simulation_controller.py  test_websocket.py
